Skill机制优化